# aoc_2020

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.circleci/: config.yml
aoc2020/: __init__.py  day1.py  day11.py  day13.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day3.py  day4.py  day6.py  day9.py
cmake/: build.cmake  tests.cmake
cpp/inc/aoc2020/: day1.hpp
cpp/src/: aocMain.cpp  day1.cpp
cpp/test/: testDay1.cpp
py/aoc2020/: day10.py  day12.py  day14.py  day2.py  day4.py  day5.py  day7.py  day8.py
py/test/: test_aoc.py  test_day1.py
test/: test_aoc.py
